--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
 
 </p>
   <p style="font-size:20px">History of HTML</p>
-    <img src="image/HTML History.jpg" alt="History of HTML" width="1200" height="650">
+    <img src="HTML History.jpg" alt="History of HTML" width="1200" height="650">
     <p style="font-size: 20px;"> W3C (World Wide Web Consortium) is an international community that develops open standards to 
         ensure the long-term growth of the Web.<br>
         WHATWG (Web Hypertext Application Technology Working Group) is a community of people interested in 
         evolving HTML and related technologies. The WHATWG was founded by individuals from Apple Inc., the Mozilla Foundation 
         and Opera Software, leading Web browser vendors, in 2004.</p>
-    <img src="image/html page structure.jpg" alt="HTML Page Structure" width="1200" height="650">
+    <img src="html page structure.jpg" alt="HTML Page Structure" width="1200" height="650">
 
    
 </div>
