--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
 
 
 </p>
-  <p style="font-size:20px">History of HTML</p>
+  <p style="font-size:20px; text-decoration: underline;">History of HTML</p>
+
+<p style="font-size:18px;">Since the early days of the World Wide Web, there have been many versions of HTML: </p>
+
 <!--     <img src="HTML History.jpg" alt="History of HTML" width="1200" height="650"> -->
   <table>
       <tr>
