--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       font-size: 18px;
     }
     
-    tr:nth-child(odd) {
+    tr:nth-child(even) {
       background-color: #bad8b8;
     }
     tr:hover {background-color: #D6EEEE;}
