--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
         WHATWG (Web Hypertext Application Technology Working Group) is a community of people interested in 
         evolving HTML and related technologies. The WHATWG was founded by individuals from Apple Inc., the Mozilla Foundation 
         and Opera Software, leading Web browser vendors, in 2004.</p>
-    <img src="html page structure.jpg" alt="HTML Page Structure" width="1200" height="650">
+  <h1>HTML Page Structure</h1>
+        <p>Below is avisualization of an HTML page structurc:</p>
+    <img src="image/html page structure.jpg" alt="HTML Page Structure" width="1100" height="550">
+
 
    
 </div>
