--- a/index.html
+++ b/index.html
@@ -263,12 +263,15 @@
         and Opera Software, leading Web browser vendors, in 2004.</p>
   <h1>HTML Page Structure</h1>
         <p>Below is avisualization of an HTML page structurc:</p>
-    <img src="image/html page structure.jpg" alt="HTML Page Structure" width="1100" height="550">
+    <img src="html page structure.jpg" alt="HTML Page Structure" width="1100" height="550">
 
 
    
 </div>
-
+<br><br><br>
+<hr>
+<p style="background-color:#48444b; color:#D6EEEE; text-align: center; font-family: 'Times New Roman', Times, serif;">Copyright &copy; 2023-24|All Rights are Researved by i-Coding.</p>
+   
    
 </body>
 </html> 
