--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         evolving HTML and related technologies. The WHATWG was founded by individuals from Apple Inc., the Mozilla Foundation 
         and Opera Software, leading Web browser vendors, in 2004.</p>
   <h1>HTML Page Structure</h1>
-        <p>Below is avisualization of an HTML page structurc:</p>
+        <p style="font-size:18px;">Below is avisualization of an HTML page structurc:</p>
     <img src="html page structure.jpg" alt="HTML Page Structure" width="1100" height="550">
 
 
