--- a/tables.html
+++ b/tables.html
@@ -1410,6 +1410,10 @@ function myFunction() {
  }
  </script>
 </div>
+  <br><br><br>
+<hr>
+<p style="background-color:#48444b; color:#D6EEEE; text-align: center; font-family: 'Times New Roman', Times, serif;">Copyright &copy; 2023-24|All Rights are Researved by i-Coding.</p>
+ 
 </body>
 </html> 
 
