--- a/tags.html
+++ b/tags.html
@@ -31,7 +31,7 @@
         
         #Intro {
           top: 20px;
-          background-color: #EE82EE;
+          background-color: #9400D3;
         }
         
         #Elements {
