--- a/tables.html
+++ b/tables.html
@@ -29,7 +29,7 @@
           left: -8px;
         }
         
-        #Intro {
+       #Intro {
           top: 20px;
           background-color: #9400D3;
         }
@@ -63,7 +63,7 @@
         }
         #Quotation {
           top: 188px;
-          background-color: #EE82EE;
+          background-color: #9400D3;
         }
         #Comments {
           top: 212px;
@@ -89,7 +89,7 @@
           background-color: #FF0000;
         }#Title {
           top: 356px;
-          background-color: #EE82EE;
+          background-color: #9400D3;
         }#Tables {
           top: 380px;
           background-color: #4B0082;
@@ -112,7 +112,7 @@
         }
         #Entities {
           top: 524px;
-          background-color: #EE82EE;
+          background-color: #9400D3;
         }
         #Tags {
           top: 548px;
