--- a/forms.html
+++ b/forms.html
@@ -716,7 +716,7 @@
         <input type="text" id="fname" name="fname"><br><br>
         <label for="lname">Last name: </label>
         <input type="text" id="lname" name="lname"><br><br>
-        <input type="image" src="image/img_submit.gif" alt="Submit" width="48" height="48">
+        <input type="image" src="img_submit.gif" alt="Submit" width="48" height="48">
 
         <h3>Code Below:</h3>
         <textarea id="myInput15" rows="7" cols="152">
