--- a/quiz.html
+++ b/quiz.html
@@ -358,7 +358,7 @@
     </fieldset>
     <br>
     <h5>This is the code of<span style='font-size:50px;'>&#9757;</span> form:</h5>
-    <textarea id="myInput" rows="30" cols="152" >
+    <textarea id="myInput1" rows="30" cols="152" >
       <form action="">
         <fieldset>
           <legend>Personalia:</legend>
@@ -424,12 +424,12 @@
       </fieldset>
     </textarea><br>
    
-   <center><button onclick="myFunction()">Copy text</button></center>
+   <center><button onclick="myFunction1()">Copy text</button></center>
    
    <script>
-   function myFunction() {
+   function myFunction1() {
      // Get the text field
-     var copyText = document.getElementById("myInput");
+     var copyText = document.getElementById("myInput1");
    
      // Select the text field
      copyText.select();
