--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         and Opera Software, leading Web browser vendors, in 2004.</p>
         <h1>HTML Page Structure</h1>
         <p style="font-size: 18px;">Below is avisualization of an HTML page structurc:</p>
-    <img src="image/html page structure.jpg" alt="HTML Page Structure" width="1100" height="550">
+    <img src="html page structure.jpg" alt="HTML Page Structure" width="1100" height="550">
 
    
 </div>
