--- a/forms.html
+++ b/forms.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="image/fav.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="fav.jpg" type="image/x-icon">
   <title>Learn HTML - Forms </title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -565,7 +565,7 @@
         <input type="text" id="fname" name="fname"><br><br>
         <label for="lname">Last name: </label>
         <input type="text" id="lname" name="lname"><br><br>
-        <input type="image" src="image/img_submit.gif" alt="Submit" width="48" height="48">
+        <input type="image" src="img_submit.gif" alt="Submit" width="48" height="48">
 
         <h3>Code Below:</h3>
         <textarea id="myInput15" rows="7" cols="152">
