--- a/tables.html
+++ b/tables.html
@@ -306,7 +306,7 @@ table, th, td {
 
    <h3>Vertical Table Headers</h3>
    <p> To use the first column as table headers, define the first cell in each row as a &lt;th&gt; element:</p>
-   <img src="image/tbl14.jpg" alt="Table Border" width="800" height="80">
+   <img src="tbl14.jpg" alt="Table Border" width="800" height="80">
    <!-- clipboard -->
    <textarea id="myInput2" rows="30" cols="152" >
     <style>
